Optimize DIOPT alignment binding, DGV bug fixed
 * Build html string instead of iteration in template
 * Change style to class
 * No match message on DGV bug fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -280,3 +280,19 @@ div.plot-tooltip {
 .legend-color.hidden {
   opacity: 0.5;
 }
+.species-tag {
+  width: 36px;
+  overflow: hidden;
+}
+.mark {
+  margin-left: 36px;
+}
+.mark-dot {
+  color: green;
+}
+.mark-colon {
+  color: blue;
+}
+.mark-asterisk {
+  color: red;
+}
